--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,15 @@ name: Chris Geissler
 markdown: kramdown
 
 theme: jekyll-theme-midnight
+
+layout: page
+title: "Research"
+permalink: /research/
+
+layout: page
+title: "Teaching"
+permalink: /research/
+
+layout: page
+title: "Publications"
+permalink: /publications/
