--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: Chris Geissler
 markdown: kramdown
-
 theme: jekyll-theme-midnight
+title: "Chris Geissler"
 
 layout: page
 title: "Research"
