--- a/_config.yml
+++ b/_config.yml
@@ -4,14 +4,14 @@ theme: jekyll-theme-midnight
 title: "Chris Geissler"
 description: Phonetics, phonology, and teaching
 
-#layout: page
-#title: "Research"
-#permalink: /research/
+layout: page
+title: "Research"
+permalink: /research/
 
-#layout: page
-#title: "Teaching"
-#permalink: /research/
+layout: page
+title: "Teaching"
+permalink: /research/
 
-#layout: page
-#title: "Publications"
-#permalink: /publications/
+layout: page
+title: "Publications"
+permalink: /publications/
