updated CV, started adding publications

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 name: Chris Geissler
 markdown: kramdown
 theme: jekyll-theme-midnight
-title: "Chris Geissler"
-description: Phonetics, phonology, and teaching
+
 
 layout: page
 title: "Research"
@@ -15,3 +14,7 @@ permalink: /research/
 layout: page
 title: "Publications"
 permalink: /publications/
+
+layout: page
+title: "Chris Geissler"
+description: Phonetics, phonology, and teaching
