edit title description, add /resources/

--- a/_config.yml
+++ b/_config.yml
@@ -16,5 +16,9 @@ title: "Publications"
 permalink: /publications/
 
 layout: page
+title: "Resources"
+permalink: /resources/
+
+layout: page
 title: "Chris Geissler"
-description: Phonetics, phonology, and teaching
+description: Phonetics, phonology, teaching
