name to Christopher, updated CV

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: Chris Geissler
+name: Christopher Geissler
 markdown: kramdown
 theme: jekyll-theme-midnight
 
@@ -20,5 +20,5 @@ title: "Resources"
 permalink: /resources/
 
 layout: page
-title: "Chris Geissler"
+title: "Christopher Geissler"
 description: Phonetics, phonology, teaching
