--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,8 @@ name: Christopher Geissler
 markdown: kramdown
 theme: jekyll-theme-midnight
 
+github:
+  is_project_page: false
 
 layout: page
 title: "Research"
@@ -21,4 +23,4 @@ permalink: /resources/
 
 layout: page
 title: "Christopher Geissler"
-description: Phonetics, phonology, teaching
+description: Phonetics, Phonology, Teaching
